--- a/style.css
+++ b/style.css
@@ -49,3 +49,17 @@ nav a:hover {
     transform: scale(1.1);
     transition: transform 0.1s;
 }
+.graficos-container {
+    margin: 5rem;
+}
+.graficos-container__texto {
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--secundary-color) solid 2px;
+}
+span {
+    font-weight: bold;
+    color: var(--secundary-color
+    );
+}
